spring 2.x upgraded